fixed footer for xs screens added function to check if app opens when available for facebook links       -unchecked on mobile as of now, opens webpage fine

--- a/CSS/BreweryStyle.css
+++ b/CSS/BreweryStyle.css
@@ -313,6 +313,7 @@ marquee
 	 height:32px;
 	 display:inline-block;
 	 float:right;
+	 margin-top:-50px;
  }
  .facebookLogo
  {
